fix: gap between header and hero section for technology page

--- a/src/Components/Pages/Technology/Technology.module.scss
+++ b/src/Components/Pages/Technology/Technology.module.scss
@@ -5,3 +5,11 @@
     margin-top: 80px;
   }
 }
+
+.technology.hidePseudo {
+  margin-top: 100px;
+}
+
+.technology.hidePseudo::before {
+  display: none;
+}
